fix(summary-card): update stories, add overflow to content

--- a/src/components/SummaryCard/_mixins.scss
+++ b/src/components/SummaryCard/_mixins.scss
@@ -135,6 +135,10 @@
       padding: $carbon--spacing-05;
     }
 
+    &__content {
+      overflow-y: auto;
+    }
+
     &__close-button {
       align-self: flex-start;
 
